// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders basic Sound Pad layout 1`] = `
<body>
  <div>
    <div>
      Sound Pad Online
      <div
        class="PadEditor"
      >
        <form>
          <input
            placeholder="Pad title"
            type="text"
          />
        </form>
        PadEditor Component
      </div>
    </div>
  </div>
</body>
`;

exports[`renders items from GunJS 1`] = `
<body>
  <div>
    <div>
      Sound Pad Online
      <div
        class="PadEditor"
      >
        <form>
          <input
            placeholder="Pad title"
            type="text"
          />
        </form>
        PadEditor Component
      </div>
      <div>
        text1
        <audio
          controls=""
          src="[object Object]"
        />
      </div>
      <div>
        text2
        <audio
          controls=""
          src="[object Object]"
        />
      </div>
    </div>
  </div>
</body>
`;
